<resources>
    <string name="app_name">മഴ</string>
    <string name="hacker_wp_desc">മലയാള അക്ഷരങ്ങളുടെ ഡിജിറ്റൽ മഴ.</string>
    <string name="ok">ശരി</string>
    <string name="cancel">റദ്ദാക്കുക</string>
    <string name="menu_reset_to_defaults">ക്രമീകരണങ്ങൾ പുനഃസ്ഥാപിക്കുക</string>
    <string name="pref_set_wallpaper">വാൾപേപ്പറായി സജ്ജമാക്കുക</string>
    <string name="back">തിരികെ</string>
    <string name="pref_font">ഫോണ്ട്</string>
    <string name="pref_char_set_summary">ഇപ്പോൾ ഉപയോഗിക്കുന്ന ചിഹ്നങ്ങൾ: %s</string>
    <string name="pref_char_set">ചിഹ്നങ്ങൾ</string>
    <string name="pref_tail">വാൽ</string>
    <string name="pref_density">കനം</string>
    <string name="pref_falling_speed">വേഗത</string>
    <string name="pref_text_size">വലിപ്പം</string>
    <string-array name="text_size_labels" translatable="false">
        <item>XXS</item>
        <item>XS</item>
        <item>S</item>
        <item>M</item>
        <item>L</item>
        <item>XL</item>
        <item>XXL</item>
        <item>XXXL</item>
    </string-array>
    <string name="pref_color">നിറം</string>
    <string name="pref_color_desc">ചിഹ്നങ്ങളുടെ നിറം</string>
    <string name="pref_bg_color">പശ്ചാത്തലം</string>
    <string name="pref_bg_image">പശ്ചാത്തല ചിത്രം</string>
    <string name="pref_bg_image_none">ഒരു ചിത്രം തിരഞ്ഞെടുക്കുക</string>
    <string name="pref_bg_image_set">തിരഞ്ഞെടുത്ത ചിത്രം</string>
    <string name="bg_image_from_photos">ഫോട്ടോകളിൽ നിന്ന് തിരഞ്ഞെടുക്കുക</string>
    <string name="bg_image_from_files">ഫയലുകളിൽ നിന്ന് തിരഞ്ഞെടുക്കുക</string>
    <string name="bg_image_remove">ചിത്രം നീക്കം ചെയ്യുക</string>
    <string name="pref_bg_image_busy">ചിത്രം തയ്യാറാക്കുന്നു…</string>
    <string name="pref_rain_color_from_image">ചിത്രത്തിൽ നിന്നുള്ള നിറം</string>
    <string name="pref_rain_color_from_image_desc">ചിഹ്നങ്ങളുടെ നിറം ചിത്രത്തിൽ നിന്ന് തിരഞ്ഞെടുക്കുക</string>
    <string name="pref_rain_behind">മഴ പിന്നിൽ</string>
    <string name="pref_rain_behind_desc">ചിത്രത്തിലെ ആളുകളെയും വസ്തുക്കളെയും മഴയ്ക്ക് മുന്നിൽ കാണിക്കുക</string>
    <string name="bg_image_error">ചിത്രം തുറക്കാനായില്ല</string>
    <string name="pref_bg_color_desc">പശ്ചാത്തലത്തിന്റെ നിറം</string>
    <string name="pref_frame_rate">ഫ്രെയിം റേറ്റ്</string>
    <string name="pref_frame_rate_value">%d fps</string>
    <string name="pref_depth">ആഴം</string>
    <string name="pref_depth_desc">ചില ചിഹ്നങ്ങൾ പുറകുവശത്തു് വരുന്ന രീതിയിൽ ക്രമീകരിക്കുക</string>
    <string name="pref_category_text">രൂപം</string>
    <string name="pref_category_color">നിറങ്ങൾ</string>
    <string name="pref_category_adjustments">ക്രമീകരണങ്ങൾ</string>

    <string name="charset_letters">അക്ഷരങ്ങൾ</string>
    <string name="charset_numbers">അക്കങ്ങൾ</string>
    <string name="charset_binary">ബൈനറി</string>

    <string name="charset_letters_characters" translatable="false">അ ആ ഇ ഉ ഋ എ ഏ ഒ ക ഖ ഗ ഘ ങ ച ഛ ജ ഝ ഞ ട ഠ ഡ ഢ ണ ത ധ ദ ഥ ന പ ഫ ബ ഭ മ യ ര ല വ ശ ഷ സ ഹ ള ഴ റ</string>
    <string name="charset_numbers_characters" translatable="false">൦ ൧ ൨ ൩ ൪ ൫ ൬ ൭ ൮ ൯</string>
    <string name="charset_binary_characters" translatable="false">൦ ൧</string>

    <string name="charset_letters_value" translatable="false">അക്ഷരങ്ങള്\u200D</string>
    <string name="charset_numbers_value" translatable="false">അക്കങ്ങള്\u200D</string>
    <string name="charset_binary_value" translatable="false">ബൈനറി</string>

    <string name="font_manjari">മഞ്ജരി</string>
    <string name="font_gayathri">ഗായത്രി</string>
    <string name="font_chilanka">ചിലങ്ക</string>
    <string name="font_dyuthi">ദ്യുതി</string>
    <string name="font_ishtika">ഇഷ്ടിക</string>
    <string name="font_karumbi">കറുമ്പി</string>
    <string name="font_malini">മാലിനി</string>
    <string name="font_nupuram">നൂപുരം</string>
    <string name="font_nupuram_calligraphy">നൂപുരം കാലിഗ്രാഫി</string>
    <string name="font_anjali_old_lipi">അഞ്ജലി ഓൾഡ് ലിപി</string>
    <string name="font_raghu_malayalam">രഘു മലയാളം</string>
    <string name="font_suruma">സുറുമ</string>
    <string name="font_rit_rachana">ആർഐടി രചന</string>
    <string name="font_rit_meera_new">ആർഐടി മീര ന്യൂ</string>
    <string name="font_rit_panmana">ആർഐടി പന്മന</string>
    <string name="font_rit_tn_joy">ആർഐടി ടി.എൻ. ജോയ്</string>
    <string name="font_rit_keraleeyam">ആർഐടി കേരളീയം</string>
    <string name="font_rit_sundar">ആർഐടി സുന്ദർ</string>
    <string name="font_rit_uroob">ആർഐടി ഉറൂബ്</string>
    <string name="font_rit_bahadur">ആർഐടി ബഹദൂർ</string>
    <string name="font_rit_karuna">ആർഐടി കരുണ</string>
    <string name="font_rit_chingam">ആർഐടി ചിങ്ങം</string>
    <string name="font_rit_ezhuthu">ആർഐടി എഴുത്ത്</string>
    <string name="font_rit_kutty">ആർഐടി കുട്ടി</string>
    <string name="font_rit_thaara">ആർഐടി താര</string>
    <string name="font_rit_lekha">ആർഐടി ലേഖ</string>
    <string name="font_rit_lasya">ആർഐടി ലാസ്യ</string>
    <string name="font_rit_ala">ആർഐടി അല</string>
    <string name="font_rit_keram">ആർഐടി കേരം</string>
    <string name="font_rit_indira">ആർഐടി ഇന്ദിര</string>
    <string name="pref_credits">കടപ്പാട്</string>
    <string name="pref_credits_desc">ഫോണ്ടുകളെ പറ്റി</string>
    <string name="credits_designer">രൂപകൽപ്പന: %s</string>
    <string name="credits_license">ലൈസൻസ്: %s</string>
</resources>
