<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <Preference
        android:title="@string/pref_set_wallpaper"
        android:key="set_as_wallpaper"
        app:iconSpaceReserved="false" />

    <PreferenceCategory
        android:title="@string/pref_category_text"
        app:iconSpaceReserved="false">
        <Preference
            android:key="preference_font_name"
            android:title="@string/pref_font"
            app:fragment="in.androidtweak.rain.settings.FontFragment"
            app:iconSpaceReserved="false" />

        <in.androidtweak.rain.settings.CharacterSetPreference
            android:key="character_set_prefs"
            android:persistent="false"
            android:title="@string/pref_char_set"
            app:fragment="in.androidtweak.rain.settings.CharacterSetFragment"
            app:iconSpaceReserved="false" />

        <in.androidtweak.rain.settings.NumberSeekBarPreference
            app:mymax="50"
            app:mymin="10"
            android:defaultValue="@integer/default_text_size"
            android:key="text_size"
            android:title="@string/pref_text_size"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_category_color"
        app:iconSpaceReserved="false">
        <in.androidtweak.rain.settings.ColorPreference
            android:defaultValue="@color/default_bit_color"
            android:key="bit_color"
            android:summary="@string/pref_color_desc"
            android:title="@string/pref_color"
            app:iconSpaceReserved="false" />

        <in.androidtweak.rain.settings.ColorPreference
            android:defaultValue="@color/default_background_color"
            android:key="background_color"
            android:summary="@string/pref_bg_color_desc"
            android:title="@string/pref_bg_color"
            app:iconSpaceReserved="false" />

        <in.androidtweak.rain.settings.BackgroundImagePreference
            android:key="background_image"
            android:persistent="false"
            android:title="@string/pref_bg_image"
            app:iconSpaceReserved="false" />

        <in.androidtweak.rain.settings.PercentSeekBarPreference
            app:mymax="100"
            app:mymin="10"
            app:mystep="10"
            android:defaultValue="@integer/default_background_image_brightness"
            android:key="background_image_brightness"
            android:title="@string/pref_bg_image_brightness"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="rain_behind_subject"
            android:summary="@string/pref_rain_behind_desc"
            android:title="@string/pref_rain_behind"
            android:widgetLayout="@layout/preference_material_switch"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_category_adjustments"
        app:iconSpaceReserved="false">
        <in.androidtweak.rain.settings.NumberSeekBarPreference
            app:mymax="15"
            app:mymin="1"
            android:defaultValue="@integer/default_tail"
            android:key="num_bits"
            android:title="@string/pref_tail"
            app:iconSpaceReserved="false" />

        <in.androidtweak.rain.settings.PercentSeekBarPreference
            app:mymax="100"
            app:mymin="10"
            app:mystep="10"
            android:defaultValue="@integer/default_density"
            android:key="density"
            android:title="@string/pref_density"
            app:iconSpaceReserved="false" />

        <in.androidtweak.rain.settings.PercentSeekBarPreference
            app:mymax="200"
            app:mymin="50"
            app:mystep="5"
            android:defaultValue="@integer/default_falling_speed"
            android:key="falling_speed"
            android:title="@string/pref_falling_speed"
            app:iconSpaceReserved="false" />

        <in.androidtweak.rain.settings.FrameRateSeekBarPreference
            app:mymax="120"
            app:mymin="15"
            app:mystep="15"
            android:defaultValue="@integer/default_frame_rate"
            android:key="frame_rate"
            android:title="@string/pref_frame_rate"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="enable_depth"
            android:summary="@string/pref_depth_desc"
            android:title="@string/pref_depth"
            android:widgetLayout="@layout/preference_material_switch"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>
</PreferenceScreen>
